<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView

        android:id="@+id/login_app_logo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"

        android:padding="10dp"
        app:srcCompat="@drawable/applogo" />

    <EditText
        android:id="@+id/login_phone_input"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/login_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/login_phone_input"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/primary"
        android:text="@string/login"

        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_marginStart="110dp"
        android:layout_marginTop="5dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/admin_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/admin"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_admin_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/no_admin"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="20sp">


        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_checkbox"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cbd_strokeColor="@color/primary" />

        <TextView
            android:id="@+id/forgetPassword_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/primary"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>