<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <ImageView

        android:id="@+id/register_app_logo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="10dp"
        app:srcCompat="@drawable/applogo" />


    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="20sp" />


    <EditText

        android:textColor="@color/white"
        android:id="@+id/register_phone_input"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/register_username_input"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/register_phone_input"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/primary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>